# crba-etl

./: .gitignore  Development.ipynb  README.md  dev.ipynb  main.ipynb  main_refactor.ipynb  mapping_dict.json  prototype_API.ipynb  pyproject.toml  requirements.txt  validation_eda.ipynb
.devcontainer/: devcontainer.json
cleanse/: __init__.py  ilo_cleanser.py  save_cleansed_data.py  sdg_cleanser.py  un_treaty_cleanser.py  unesco_cleanser.py  who_cleanser.py  wpac_cleanser.py
crba_project/: __main__.py  conf.py  etl.py  log.py  main.py
data_dictionary/: indicator_dictionary_CRBA.xlsx
data_in/: WPP2019_POP_F01_1_TOTAL_POPULATION_BOTH_SEXES.xlsx  all_countrynames_list.xlsx  column_mapping.py  crba_country_list.xlsx  indicator_dictionary_CRBA.xlsx  known_issus.csv  manually_extracted_raw_data.py  staging_create_raw_data.py  staging_create_raw_data_human_entered.py  staging_create_raw_data_machine_entered.py  value_mapping.py  value_mapping_sdmx_encoding.py
extract/: __init__.py  ilo_extractor.py  ilo_normlex_extractor.py  save_raw_data.py  sdg_extractor.py  un_treaty_extractor.py  unesco_extractor.py  who_extractor.py
fileUtils/: fileDownload.py
interactive_jupyter/: .~lock.run.csv#  aggregation.ipynb  greate_expectations.ipynb  mapping_dict.json
normalize/: save_normalized_data.py  scaler.py
samples/: filter_csv.csv  output_format.json  sample_S-248.csv
sdmx/: sdmx_struc.py
tmee/: all_countrynames_list.xlsx  excel_tmee.ipynb  populate_dictionary.ipynb  prototype_API.ipynb  prototype_API_v2.ipynb  prototype_extract_transform.ipynb  utils.py  (+1 more)
(+441 files in other folders)
