[tool.poetry]
name = "crba-project"
version = "0.1.0"
description = "Project for developing a Python Programm to create the data Foundation for the CRBA"
authors = ["Lasse Karls <l_karls@outlook.com>"]
readme = "README.md"
packages = [{include = "crba_project"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
openpyxl = "^3.0.10"
requests = "^2.28.1"
numpy = "^1.23.5"
nltk = "^3.7"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
html5lib = "^1.1"
xlrd = "^2.0.1"
selenium = "^4.6.1"
webdriver-manager = "^3.8.5"
requests-cache = "^0.9.7"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
